# reprobate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
reprobate/: __init__.py  core.py  ext_arrow.py  ext_numpy.py  ext_pandas.py  ext_pil.py  ext_polars.py  ext_pydantic.py  ext_torch.py  registry.py
tests/: test_core.py  test_ext_arrow.py  test_ext_numpy.py  test_ext_pandas.py  test_ext_pil.py  test_ext_polars.py  test_ext_pydantic.py
